deployment.yaml
# deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: garden-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: garden-app
  namespace: garden-app
  annotations:
    k8s.grafana.com/scrape: "true"
    k8s.grafana.com/metrics.portNumber: "8080"
    k8s.grafana.com/metrics.path: /q/metrics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: garden-app
  template:
    metadata:
      labels:
        app: garden-app
    spec:
      containers:
        - name: garden-app
          image: garden-app:0.1
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 8080
