service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garden-app
  namespace: garden-app
  labels:
    app: garden-app
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path:   "/q/metrics"
    prometheus.io/port:   "8080"
spec:
  type: NodePort
  selector:
    app: garden-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
